# libavogadro1cp2k

./: CMakeLists.txt  README.md
cp2k/: CMakeLists.txt  cp2kextension.cpp  cp2kextension.h  cp2kinputdialog.cpp  cp2kinputdialog.h  cp2kinputdialog.ui  cp2kinputextension.cpp  cp2kinputextension.h  cp2koutputdialog.cpp  cp2koutputdialog.h  cp2koutputdialog.ui  psfpotdialog.cpp  psfpotdialog.h  psfpotdialog.ui  spectraplotdialog.ui
